<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_note_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/form_note_data_edition_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="04/Fev/2020 00:10" />

    <EditText
        android:id="@+id/form_note_title_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:padding="8dp"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_note_data_edition_textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/form_note_description_editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:padding="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/form_note_grade_textView"
        app:layout_constraintEnd_toEndOf="@id/form_note_title_editText"
        app:layout_constraintStart_toStartOf="@id/form_note_title_editText"
        app:layout_constraintTop_toBottomOf="@id/form_note_title_editText"
        tools:ignore="TextFields"
        android:scrollbars = "vertical"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/form_note_add_note_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/a_floating_action_button_to_add_note"
        android:src="@drawable/ic_baseline_check"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/form_note_grade_textView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#eeeeee"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/form_note_bold_disabled_button"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="8dp"
        android:background="@drawable/font_bold"
        android:visibility="invisible"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/form_note_grade_textView"
        app:layout_constraintEnd_toEndOf="@id/form_note_grade_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/form_note_grade_textView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/form_note_bold_enabled_button"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="8dp"
        android:background="@color/GRAY_ENABLED"
        android:contentDescription="@string/a_button_of_bold_style_text"
        android:scaleType="centerCrop"
        android:src="@drawable/font_bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/form_note_grade_textView"
        app:layout_constraintEnd_toEndOf="@id/form_note_grade_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/form_note_grade_textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/form_note_italic_disabled_button"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="8dp"
        android:background="@drawable/font_italic"
        android:visibility="invisible"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/form_note_grade_textView"
        app:layout_constraintEnd_toEndOf="@id/form_note_grade_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/form_note_bold_disabled_button"
        app:layout_constraintTop_toTopOf="@id/form_note_grade_textView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/form_note_italic_enabled_button"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="8dp"
        android:background="@color/GRAY_ENABLED"
        android:contentDescription="@string/a_button_of_italic_style_text"
        android:scaleType="centerCrop"
        android:src="@drawable/font_italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/form_note_grade_textView"
        app:layout_constraintEnd_toEndOf="@id/form_note_grade_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/form_note_bold_disabled_button"
        app:layout_constraintTop_toTopOf="@id/form_note_grade_textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/form_note_color_font_button"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="8dp"
        android:background="@drawable/item_color_font_secondary"
        android:visibility="invisible"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/form_note_grade_textView"
        app:layout_constraintEnd_toEndOf="@id/form_note_grade_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/form_note_italic_disabled_button"
        app:layout_constraintTop_toTopOf="@id/form_note_grade_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/formulario_note_colorIcon_background_textView"
        android:layout_width="31.5dp"
        android:layout_height="3.5dp"
        android:background="@drawable/item_color_font"
        android:backgroundTint="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/form_note_color_font_button"
        app:layout_constraintEnd_toEndOf="@id/form_note_color_font_button"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@id/form_note_color_font_button"
        app:layout_constraintTop_toTopOf="@id/form_note_color_font_button"
        app:layout_constraintVertical_bias="0.85"

        tools:targetApi="lollipop" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/form_note_colors_background_note_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@id/form_note_grade_textView"
        app:layout_constraintStart_toStartOf="@id/form_note_grade_textView"
        app:layout_constraintTop_toBottomOf="@id/form_note_bold_disabled_button"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_colors"

        />


</androidx.constraintlayout.widget.ConstraintLayout>